--- a/champion/templates/index.html
+++ b/champion/templates/index.html
@@ -977,7 +977,7 @@
             </div>
         </div>
         <div class="join-network-image">
-            <img class="join-private-network-img" src="{% static 'images/TCC (40).png' %}" alt="Exclusive Network">
+            <img class="join-private-network-img" src="{% static 'images/TCC (46).png' %}" alt="Exclusive Network">
         </div>
     </div>
 </section>
@@ -1435,7 +1435,7 @@
             </div>
         </div>
         <div class="business-potential-image">
-            <img src="{% static 'images/TCC (22).png' %}" alt="Business Potential Image">
+            <img src="{% static 'images/TCC (47).png' %}" alt="Business Potential Image">
         </div>
     </div>
 </section>
@@ -1661,8 +1661,8 @@
     #explore-services{
         background-repeat: no-repeat;
         background-size: cover;
-        background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),url("{% static 'images/TCC W.png' %}");
-        padding: 40px 30px;
+        background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)),url("{% static 'images/TCC BANNER2.png' %}");
+        padding: 100px 30px;
         width: 100%;
         color: #fff;
         text-align: center;
