--- a/champion/templates/index.html
+++ b/champion/templates/index.html
@@ -295,7 +295,7 @@
                 <div class="text">
                     <h4>TCC RESOURCES</h4>
                     <p>Explore our premier life style and services</p>
-                    <a href="{% url 'resources' %}" class="find-out-more-link">Browse Our Catalog &rarr;</a>
+                    <a href="#unlock-potential-section" class="find-out-more-link">Browse Our Catalog &rarr;</a>
                 </div>
             </div>
             <div class="interactive-card-button" id="interactive-card3" data-index="3">
@@ -305,7 +305,7 @@
                 <div class="text">
                     <h4>TCC BUSINESS</h4>
                     <p>Grow with those who stand with you no matter the time or place</p>
-                    <a href="{% url 'register_partner' %}" class="find-out-more-link">Send An Enquiry &rarr;</a>
+                    <a href="#business-potential-section" class="find-out-more-link">Send An Enquiry &rarr;</a>
                 </div>
             </div>
         </div>
@@ -640,7 +640,7 @@
             <p>The Champions Club provides it's esteemed community members with an <strong> invite-only</strong> global <strong> private</strong> network where achievers from all around the world connect and celebrate life together.</p>
             
             <p><strong>TCC Networking </strong> is in a league of it's own, we provide the best as we look for the best. One doesn't ask to join The Global Private Network, one get's asked.</p>
-            <a href="#for-champions"><button>LEARN MORE</button></a>
+            <a href="{%url 'learnmore'%}"><button>LEARN MORE</button></a>
         </div>
         <div class="exclusive-container-right"></div> <!-- No need for an img tag since we are using the background image -->
     </section>
